test/files/neg/t4302.check
t4302.scala:4: warning: abstract type T is unchecked since it is eliminated by erasure
  def hasMatch[T](x: AnyRef) = x.isInstanceOf[T]
                                             ^
1 warning
error: No warnings can be incurred under -Werror.
